# hackaton_team_5

./: .gitignore  CLAUDE.md  databricks.yml  pyproject.toml  variables.yml
.claude/agents/: databricks-general.md  project-manager.md  python-data-engineer.md  solution-architect.md  uiux-expert.md
.claude/commands/: new-feature.md  review-pipeline.md  static-code-checks.md
.claude/skills/databricks-agent-bricks/: 2-supervisor-agents.md
.claude/skills/databricks-dbsql/: SKILL.md  ai-functions.md  best-practices.md
.claude/skills/databricks-mlflow-evaluation/references/: patterns-trace-ingestion.md
.claude/skills/databricks-model-serving/: 3-genai-agents.md  4-tools-integration.md  5-development-testing.md  6-logging-registration.md  SKILL.md
.claude/skills/databricks-python-sdk/examples/: 1-authentication.py  2-clusters-and-jobs.py  3-sql-and-warehouses.py  5-serving-and-vector-search.py
.claude/skills/databricks-unstructured-pdf-generation/: SKILL.md
.claude/skills/mlflow-onboarding/: SKILL.md
fixtures/: device_telemetry.csv  patients.csv
general_resources/: variables.yml
general_resources/resources/: app.yml  database.yml
general_resources/src/app/: app.py  databricks.yml  server.js
resources/: app.yml  job_example.job.yml  schemas.yml
src/: placeholder.py
src/cgm_pipeline/: schemas.py
tests/: test_schemas.py
